Wed Mar 26 10:36:39 2014  NARUSE, Yui  <naruse@ruby-lang.org>

	* addr2line.c (follow_debuglink): show message if it closes opened
	  (and maybe used) elf binary.

Wed Mar 26 10:34:25 2014  NARUSE, Yui  <naruse@ruby-lang.org>

	* addr2line.c (fill_line): pass and use offset instead of
	  curobj_baseaddr.

Wed Mar 26 09:07:48 2014  Yutaka Kanemoto  <kanemoto@ruby-lang.org>

	* configure.in: add --disable-pie. [Feature #9673]

Wed Mar 26 08:47:04 2014  NARUSE, Yui  <naruse@ruby-lang.org>

	* addr2line.c (fill_lines): don't run fill_lines multiple times.

Wed Mar 26 08:45:00 2014  Sam Rawlins  <sam.rawlins@gmail.com>

	* internal.h: add prototype for rb_reg_search0

	* re.c: rename rb_reg_search to rb_reg_search0, add set_backref_str
	  argument to allow callers to indicate that they don't require the
	  backref string to be allocated.

	* string.c: don't allocate backref str if replacement string is provided

	[GH-578] [Bug #9676] [ruby-core:61682]

Wed Mar 26 08:29:43 2014  mo khan  <mo@mokhan.ca>

	* lib/rubygem.rb: fix spelling of Jim Weirich.  [Fixes GH-577]

Wed Mar 26 01:55:45 2014  NARUSE, Yui  <naruse@ruby-lang.org>

	* addr2line.c (rb_dump_backtrace_with_lines): a function to get must
	  be a function in the main executable, whose absolute path is not
	  available by dladdr, and ruby get it by /proc/self/exe on Linux.

Wed Mar 26 01:34:50 2014  NARUSE, Yui  <naruse@ruby-lang.org>

	* addr2line.c (fill_lines): skip if path is NULL.

Tue Mar 25 23:57:17 2014  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* parse.y (parser_yylex): only a newline after label should be
	  significant.  [ruby-core:61658] [Bug #9669]

Tue Mar 25 23:32:25 2014  Kazuhiro NISHIYAMA  <zn@mbf.nifty.com>

	* ext/pathname/lib/pathname.rb (Pathname#join): remove unnecessary
	  unshift.

	* test/pathname/test_pathname.rb (TestPathname#test_join): add tests.

Tue Mar 25 16:47:36 2014  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* parse.y (lex_state_e, parser_params, f_arglist, parser_yylex):