@@ -1,3 +1,8 @@
+Wed Mar 26 11:20:24 2014  Nobuyoshi Nakada  <nobu@ruby-lang.org>
+
+	* ext/thread/thread.c (undumpable): ConditionVariable and Queue
+	  are not dumpable.  [ruby-core:61677] [Bug #9674]
+
 Wed Mar 26 10:36:39 2014  NARUSE, Yui  <naruse@ruby-lang.org>
 
 	* addr2line.c (follow_debuglink): show message if it closes opened
